--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -6,27 +6,22 @@
 [[main]]
   name = "Home"
   url = "#about"
-  weight = 10
+  weight = 1
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
-
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
-
-[[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
+  name = "Blog"
+  url = "blog/"
+  weight = 2
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 3
+
+[[main]]
+  name = "Resume"
+  url = "resume/"
+  weight = 4
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
