--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,6 +23,11 @@
   url = "resume/"
   weight = 4
 
+[[main]]
+  name = "<i class='fas fa-rss'></i> RSS"
+  url = "index.xml"
+  weight = 5
+
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[main]]
