--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -24,6 +24,7 @@ theme = "academic"
 
 # Get last modified date for content from Git?
 enableGitInfo = false
+enableRobotsTXT = true
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
